# dioxus_ssg

./: Cargo.toml  Dioxus.toml  README.md
src/: main.rs
static/: index.html
