[package]
name = "dioxus_ssg"
version = "0.1.0"
authors = ["xiehaiyong <xietfsj@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.1", features = ["router", "fullstack"] }

[dev-dependencies]
# TODO: Can we remove this when Dioxus v0.6.2 is released?
dioxus-isrg = "0.6.1"
# TODO: Can we remove this when Dioxus v0.6.2 is released?
dioxus-ssr = "0.6.1"

[features]
default = []
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
